# pytest-pacman

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.py
doc/: conf.py  index.rst
pytest_pacman/: plugin.py
test/: core.json  package.json  test_fixtures.py
