[project]
name = "pytest-pacman"
version = "0.1.1"
description = "py.test plugin to generate pacman db fixtures"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pytest", "pacman"]
maintainers = [
  {name = "Jelle van der Waa"},
  {email = "jelle@archlinux.org"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: DFSG approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
]
requires-python = ">=3.5"
dependencies = [
  "pytest>=3.7.0"
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
]

[project.urls]
repository = "http://github.com/archlinux/pytest-pacman"

[project.entry-points."pytest11"]
pacman = "pytest_pacman.plugin"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  "doc",
]

[tool.ruff.lint]
select = [
  "A",       # flake8-builtins
  "B",       # flake8-bugbear
  "C4",      # flake8-comprehensions
  "E",       # pycodestyle
  "F",       # pyflakes
  "RUF",     # ruff rules
]
